update sliding window demo to have window and fix overflow on array for smaller screens

--- a/src/components/CircularColorsDemo/CircularColorsDemo.module.css
+++ b/src/components/CircularColorsDemo/CircularColorsDemo.module.css
@@ -35,6 +35,8 @@
   /* pointer-events: none; */
   border: 4px solid var(--color-text);
   border-radius: 12px;
+  background-color: hsla(268, 47%, 71%, 0.5);
+  z-index: 999;
 }
 
 .timeDisplay {
