--- a/src/components/SlidingWindowDemo/SlidingWindow.module.css
+++ b/src/components/SlidingWindowDemo/SlidingWindow.module.css
@@ -12,20 +12,42 @@
 .windowWrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: safe center;
   gap: 8px;
+  padding: 8px;
+
+  list-style-type: none;
+  max-width: 100%;
+  overflow: auto;
+}
+
+.itemWrapper {
+  position: relative;
 }
 
 .item {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: aqua;
-  border: 1px solid black;
-  width: 50px;
-  height: 50px;
+  background-color: var(--color-primary);
+  color: var(--color-primary-contrast);
+  border: 1px solid var(--color-text);
+  border-radius: 4px;
+  font-size: 1.125rem;
+  font-weight: 550;
+  width: 60px;
+  height: 60px;
 }
 
-.selectedItem {
-  background-color: purple;
+.slidingWindow {
+  position: absolute;
+  inset: -4px;
+  /* Change from hard coded to state value */
+  width: 204px;
+  /* pointer-events: none; */
+  border: 2px solid var(--color-secondary);
+  border-radius: 6px;
+  background-color: hsla(294, 66%, 71%, 0.4);
+  z-index: 99;
 }
